Fixed flex text wrap issue

--- a/_scss/partials/design/_post-lists.scss
+++ b/_scss/partials/design/_post-lists.scss
@@ -40,7 +40,7 @@
     @include flex(1 0 100%);
 
     @include breakpoint($medium) {
-      @include flex(0 0 auto);
+      @include flex(0 1 auto);
     }
 
   }
