--- a/css/style.css
+++ b/css/style.css
@@ -1366,11 +1366,11 @@ img.profile, img.dogs {
             flex: 1 0 100%; }
     @media (min-width: 768px) {
       .posts .post-link {
-        -webkit-flex: 0 0 auto;
-        -moz-flex: 0 0 auto;
-        -ms-flex: 0 0 auto;
+        -webkit-flex: 0 1 auto;
+        -moz-flex: 0 1 auto;
+        -ms-flex: 0 1 auto;
         -webkit-box-flex: 0;
-                flex: 0 0 auto; } }
+                flex: 0 1 auto; } }
 
 .home {
   display: -webkit-box;
